--- a/frontend/public/landing.html
+++ b/frontend/public/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLTANKS</title>
+    <title>clTanks</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -253,13 +253,13 @@
             gap: 0.5rem;
             padding: 0.25rem 0.75rem;
             border-radius: 9999px;
-            border: 1px solid rgba(150, 220, 127, 0.3);
-            background-color: rgba(150, 220, 127, 0.1);
+            border: 1px solid rgba(245, 196, 124, 0.3);
+            background-color: rgba(245, 196, 124, 0.1);
             width: fit-content;
         }
 
         .hero-badge .material-symbols-outlined {
-            color: #96dc7f;
+            color: #f5c47c;
             font-size: 12px;
             animation: pulse 2s infinite;
         }
@@ -267,7 +267,7 @@
         .hero-badge span:last-child {
             font-size: 0.75rem;
             font-family: 'JetBrains Mono', monospace;
-            color: #96dc7f;
+            color: #f5c47c;
             font-weight: 700;
             letter-spacing: 0.05em;
             text-transform: uppercase;
