--- a/frontend/public/landing.html
+++ b/frontend/public/landing.html
@@ -253,13 +253,13 @@
             gap: 0.5rem;
             padding: 0.25rem 0.75rem;
             border-radius: 9999px;
-            border: 1px solid rgba(245, 196, 124, 0.3);
-            background-color: rgba(245, 196, 124, 0.1);
+            border: 1px solid rgba(150, 220, 127, 0.3);
+            background-color: rgba(150, 220, 127, 0.1);
             width: fit-content;
         }
 
         .hero-badge .material-symbols-outlined {
-            color: #f5c47c;
+            color: #96dc7f;
             font-size: 12px;
             animation: pulse 2s infinite;
         }
@@ -267,7 +267,7 @@
         .hero-badge span:last-child {
             font-size: 0.75rem;
             font-family: 'JetBrains Mono', monospace;
-            color: #f5c47c;
+            color: #96dc7f;
             font-weight: 700;
             letter-spacing: 0.05em;
             text-transform: uppercase;
