--- a/frontend/public/landing.html
+++ b/frontend/public/landing.html
@@ -472,13 +472,25 @@
         .terminal-content {
             padding: 1rem;
             height: 420px;
-            overflow: hidden;
+            overflow-y: auto;
             position: relative;
+            scrollbar-width: thin;
+            scrollbar-color: rgba(255,255,255,0.1) transparent;
+        }
+
+        .terminal-content::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        .terminal-content::-webkit-scrollbar-thumb {
+            background: rgba(255,255,255,0.1);
+            border-radius: 2px;
         }
 
         .terminal-mock {
             width: 100%;
-            height: 100%;
+            height: auto;
+            min-height: 100%;
             position: relative;
             padding: 0.5rem;
             background-color: #241227;
@@ -486,11 +498,11 @@
             font-size: 13px;
             line-height: 1.4;
             color: #e6eeed;
-            overflow: hidden;
         }
 
         .terminal-line {
             margin-bottom: 0.25rem;
+            min-height: 1.2em;
         }
 
         .terminal-prompt {
@@ -1159,9 +1171,15 @@
             }
 
             function render() {
-                let html = lines.map(line => '<div class="terminal-line">' + line + '</div>').join('');
+                let html = lines.map(line => '<div class="terminal-line">' + (line === '' ? '&nbsp;' : line) + '</div>').join('');
                 html += '<div class="terminal-line">' + currentLine + (cursorVisible ? '<span class="terminal-cursor"></span>' : '') + '</div>';
                 terminalEl.innerHTML = html;
+                
+                // Scroll to bottom
+                const content = terminalEl.parentElement;
+                if (content) {
+                    content.scrollTop = content.scrollHeight;
+                }
             }
 
             function prompt() {
@@ -1191,6 +1209,7 @@
 
             async function newLine() {
                 lines.push(currentLine);
+                lines.push(''); // Add a blank line after terminal command
                 currentLine = '';
                 render();
             }
