Sounds and landing page

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -6,11 +6,29 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>clTanks</title>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
-    rel="stylesheet" />
+  <style>
+    @font-face {
+      font-family: 'Space Grotesk';
+      src: url('/fonts/SpaceGrotesk.ttf') format('truetype-variations');
+      font-weight: 300 700;
+      font-display: block;
+    }
+
+    @font-face {
+      font-family: 'JetBrains Mono';
+      src: url('/fonts/JetBrainsMono.ttf') format('truetype-variations');
+      font-weight: 400 700;
+      font-display: block;
+    }
+
+    @font-face {
+      font-family: 'Material Symbols Outlined';
+      src: url('/fonts/MaterialSymbolsOutlined.woff2') format('woff2');
+      font-weight: 100 700;
+      font-display: block;
+      font-style: normal;
+    }
+  </style>
 
 </head>
 
